--- a/buffet-booking/src/main/resources/application.properties
+++ b/buffet-booking/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=1111
+spring.datasource.url=jdbc:mysql://localhost:3306/buffet
+spring.datasource.username=root
+#spring.datasource.password=
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
